--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link
             href='https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap'
             rel='stylesheet'>
+        <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&apikey=f0c20f1d-fc80-4bee-814a-75bbf11f4fcc" type="text/javascript"></script>
         <title>A-GELD</title>
     </head>
     <body>
